globus-gram-client (13.11-1+gt6.@distro@) @distro@; urgency=low

  * doxygen fixes

 -- Globus Toolkit <support@globus.org>  Mon, 03 Nov 2014 13:12:36 -0500

globus-gram-client (13.10-5+gt6.@distro@) @distro@; urgency=low

  * GT-567: Remove requirement that GRAM5 use SSLv3
  * Missing libltdl-dev and openssl dependencies
  * Remove latex dependencies

 -- Globus Toolkit <support@globus.org>  Fri, 24 Oct 2014 09:19:32 -0400

globus-gram-client (13.9-1+gt6.@distro@) @distro@; urgency=low

  * Include more manpages for API
  * Fix some Doxygen issues
  * Quiet some autoconf/automake warnings

 -- Globus Toolkit <support@globus.org>  Mon, 22 Sep 2014 15:58:10 -0400

globus-gram-client (13.8-1+gt6.@distro@) @distro@; urgency=low

  * Merge fixes from ellert-globus_6_branch

 -- Globus Toolkit <support@globus.org>  Fri, 22 Aug 2014 16:29:29 -0400

globus-gram-client (13.7-3+gt6.@distro@) @distro@; urgency=low

  * Fix Source path

 -- Globus Toolkit <support@globus.org>  Wed, 20 Aug 2014 15:42:40 -0400

globus-gram-client (13.7-2+gt6.@distro@) @distro@; urgency=low

  * Rename dbg packages

 -- Globus Toolkit <support@globus.org>  Wed, 18 Jun 2014 14:38:44 -0400

globus-gram-client (13.7-1+gt6.@distro@) @distro@; urgency=low

  * Merge changes from Mattias Ellert

 -- Globus Toolkit <support@globus.org>  Mon, 09 Jun 2014 14:39:43 -0400

globus-gram-client (13.6-1+gt6.@distro@) @distro@; urgency=low

  * Test fixes

 -- Globus Toolkit <support@globus.org>  Thu, 24 Apr 2014 15:32:29 -0400

globus-gram-client (13.5-1+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes

 -- Globus Toolkit <support@globus.org>  Thu, 24 Apr 2014 15:14:22 -0400

globus-gram-client (13.4-1+gt6.@distro@) @distro@; urgency=low

  * Test fixes

 -- Globus Toolkit <support@globus.org>  Tue, 22 Apr 2014 15:50:25 -0400

globus-gram-client (13.3-1+gt6.@distro@) @distro@; urgency=low

  * Version bump for consistency

 -- Globus Toolkit <support@globus.org>  Fri, 18 Apr 2014 13:47:30 -0400
