@@ -1,6 +1,6 @@
 Name: globus-gram-client
 Maintainer: Mattias Ellert <mattias.ellert@fysast.uu.se>
-Source: http://www.globus.org/ftppub/gt6/packages/globus_gram_client-13.11.tar.gz
+Source: http://www.globus.org/ftppub/gt6/packages/globus_gram_client-13.12.tar.gz
 
 
 Upstream-Authors: The Globus Alliance - http://www.globus.org/
