@@ -1,13 +1,13 @@
 Name:		globus-gram-client
 %global _name %(tr - _ <<< %{name})
-Version:	13.11
+Version:	13.12
 Release:	1%{?dist}
 Summary:	Globus Toolkit - GRAM Client Library
 
 Group:		System Environment/Libraries
 License:	ASL 2.0
 URL:		http://www.globus.org/
-Source:	http://www.globus.org/ftppub/gt6/packages/globus_gram_client-13.11.tar.gz
+Source:	http://www.globus.org/ftppub/gt6/packages/globus_gram_client-13.12.tar.gz
 BuildRoot:	%{_tmppath}/%{name}-%{version}-%{release}-root-%(%{__id_u} -n)
 
 Requires:	globus-common%{?_isa} >= 14
@@ -142,6 +142,9 @@ rm -rf $RPM_BUILD_ROOT
 %{_mandir}/man3/*
 
 %changelog
+* Mon Jan 05 2015 Globus Toolkit <support@globus.org> - 13.12-1
+- Fix test on static build
+
 * Mon Nov 03 2014 Globus Toolkit <support@globus.org> - 13.11-1
 - doxygen fixes
 
