@@ -1,3 +1,9 @@
+globus-gram-client (13.12-1+gt6.@distro@) @distro@; urgency=low
+
+  * Fix test on static build
+
+ -- Globus Toolkit <support@globus.org>  Mon, 05 Jan 2015 13:17:16 -0500
+
 globus-gram-client (13.11-1+gt6.@distro@) @distro@; urgency=low
 
   * doxygen fixes
